--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 :root {
-  --main-bg-color: #FFF;
+    --main-bg-color: #EEE;
+    --generator-bg: rgb(0, 204, 188);
+    --font-color: #fff;
 }
 
 * {
@@ -15,13 +17,31 @@ body {
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
+    font-family: 'Slabo 27px', serif;
 }
 
 /*
 -------------------------------------------------------------------
-YOUR SECTIONS
+GENERATOR
 -------------------------------------------------------------------
 */
+div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: max-content;
+    cursor: pointer;
+}
+
+p {
+    background-color: var(--generator-bg);
+    color: var(--font-color);
+    font-size: 12vmin;
+    width: max-content;
+    margin: 2%;
+    padding: 1% 3%;
+}
 
 /*
 -------------------------------------------------------------------
