--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --main-bg-color: #EEE;
     --generator-bg: rgb(0, 204, 188);
     --font-color: #fff;
+    --footer-font-color: #666;
 }
 
 * {
@@ -34,13 +35,32 @@ div {
     cursor: pointer;
 }
 
-p {
+div p {
     background-color: var(--generator-bg);
     color: var(--font-color);
     font-size: 10vmin;
     width: max-content;
     margin: 2%;
     padding: 1% 3%;
+}
+
+footer p {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    bottom: 1.5vw;
+    right:1.5vw;
+    font-size: 0.9em;
+    color: var(--footer-font-color);
+}
+
+a:link, a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    text-decoration: underline;
 }
 
 /*
