--- a/css/style.css
+++ b/css/style.css
@@ -48,18 +48,31 @@ footer p {
     position: absolute;
     margin: 0;
     padding: 0;
-    bottom: 1.5vw;
-    right:1.5vw;
-    font-size: 0.9em;
-    color: var(--footer-font-color);
+    bottom: 1.5vmin;
+    right: 1.5vmin;
 }
 
-a:link, a:visited {
+footer img {
+    width: 10vmin;
+    height: 10vmin;
+    max-width: 40px;
+    max-height: 40px;
+    margin-right: 1vmin;
+    filter: invert(0.4);
+}
+
+footer img:hover {
+    filter: invert(0.2);
+}
+
+a:link,
+a:visited {
     color: inherit;
     text-decoration: none;
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
     text-decoration: underline;
 }
 
@@ -70,11 +83,12 @@ MEDIA QUERIES
 */
 
 @media (prefers-color-scheme: dark) {
-	:root {
-		--main-bg-color: #222;
-		--font-color: #eee;
-	}
-	p {
-		filter: brightness(0.8);
-	}
+    :root {
+        --main-bg-color: #222;
+        --font-color: #eee;
+    }
+
+    p {
+        filter: brightness(0.8);
+    }
 }
