--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
     font-family: 'Slabo 27px', serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100dvh;
 }
 
 /*
@@ -27,21 +31,22 @@ GENERATOR
 -------------------------------------------------------------------
 */
 div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: max-content;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
     cursor: pointer;
+    gap: 2vmin;
 }
 
 div p {
+    display: inline-block;
     background-color: var(--generator-bg);
     color: var(--font-color);
     font-size: 10vmin;
-    width: max-content;
-    margin: 2%;
-    padding: 1% 3%;
+    margin: 0;
+    padding: 1vmin 2vmin;
+    white-space: nowrap;
+    word-break: keep-all;
 }
 
 footer p {
